src/App.css
@import url("https://fonts.googleapis.com/css?family=Lato");
@import url("https://fonts.googleapis.com/css?family=Raleway");

html,
body {
  margin: 0;
  font-family: Lato, sans-serif;
  background-color: #f5f6fa;
}

.container {
  margin: 80px auto 60px auto;
  width: 50%;
}

.header {
  margin-top: 80px;
}

ol,
ul {
  margin: 0;
  padding: 0;
  list-style-position: inside;
}

.title {
  text-align: center;
  font-size: 50px;
  font-family: Raleway, Lato, sans-serif;
  margin: 0;
  margin-bottom: 30px;
  display: block;
}

.menu {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin-bottom: 40px;
  padding-left: 0;
}

.menu__link {
  color: #444;
  text-transform: uppercase;
  text-decoration: none;
  box-sizing: border-box;
  border-bottom: 2px solid transparent;
  font-size: 16px;
  margin: 0 12px;
  letter-spacing: 1px;
}
.menu__link:active,
.menu__link:focus {
  color: #444;
}
.menu__link:hover {
  border-bottom: 2px solid #222;
  box-sizing: border-box;
  color: #222;
}

.question {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom: 26px;
}

.question__number {
  font-weight: 700;
  font-size: 20px;
  margin-right: 16px;
}

ol .question__card {
  list-style-type: none;
}

.question__card {
  box-shadow: 0 0 1px rgba(240, 242, 247, 0.1), 0 6px 12px rgba(0, 32, 128, 0.1);
  padding: 24px;
  width: 100%;
  background-color: white;
  transition: 0.4s ease all;
  border-radius: 4px;
}
.question__card:hover {
  box-shadow: 0 0 2px rgba(240, 242, 247, 0.1),
    0 12px 24px rgba(0, 32, 128, 0.1);
  cursor: pointer;
  transform: scale(1.02);
}
.question__question {
  font-size: 16px;
  font-weight: 700;
  color: #1f253d;
}

.question__answer {
  opacity: 0;
  transition: all ease 0.2s;
  max-height: 0;
  overflow: hidden;
  color: #444;

  line-height: 1.5;
  display: block;
  font-size: 14px;
}
.question__answer--show {
  opacity: 1;
  max-height: 200px;
}

.question__button {
  border: 0;
  line-height: 18px;
  font-size: 12px;
  text-transform: uppercase;
  width: 66px;
  transition: all ease 0.3s;
  display: inline-block;
  color: #444;
  font-weight: bold;
  background: none;
}
.question__button:focus,
.question__button:active {
  outline: 0;
  border: 0;
}

.question__button:hover {
  cursor: pointer;
}

.center {
  text-align: center;
  margin: auto;
}

@media (max-width: 900px) {
  .container {
    width: 80%;
  }
}

